--- a/WindowsFormsApp2/WcfServiceLibrary1/WcfServiceLibrary1.csproj
+++ b/WindowsFormsApp2/WcfServiceLibrary1/WcfServiceLibrary1.csproj
@@ -59,6 +59,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
